--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -20,27 +20,32 @@ jobs:
         compiler: [gcc, clang] # Тестируем с GCC и Clang
     steps:
       - name: Checkout repository # Шаг для клонирования вашего репозитория
-        uses: actions/checkout@v4  - name: Install CMake # Устанавливаем CMake, если он не установлен
-    run: sudo apt-get update &amp;&amp; sudo apt-get install -y cmake
+        uses: actions/checkout@v4
 
-  - name: Set up C++ compiler environment # Настраиваем переменные окружения для выбранного компилятора
-    run: |
-      if [ "${{ matrix.compiler }}" == "gcc" ]; then
-        echo "CXX=g++" &gt;&gt; $GITHUB_ENV
-        echo "CC=gcc" &gt;&gt; $GITHUB_ENV
-      else
-        echo "CXX=clang++" &gt;&gt; $GITHUB_ENV
-        echo "CC=clang" &gt;&gt; $GITHUB_ENV
-      fi
-    shell: bash
+      - name: Install CMake # Устанавливаем CMake, если он не установлен
+        run: sudo apt-get update && sudo apt-get install -y cmake
 
-  - name: Configure CMake # Запуск CMake для генерации файлов сборки
-    # -B build -S . означает, что сборка будет в подкаталоге 'build', а исходники в текущем '.'
-    run: cmake -B build -S .
+      # Настраиваем переменные окружения для GCC
+      - name: Set up C++ compiler environment (GCC)
+        if: ${{ matrix.compiler == 'gcc' }} # Условие: если компилятор - gcc
+        run: |
+          echo "CXX=g++" >> $GITHUB_ENV
+          echo "CC=gcc" >> $GITHUB_ENV
 
-  - name: Build with ${{ matrix.compiler }} # Запуск сборки проекта
-    run: cmake --build build
-  # Задание для сборки на Windows (опционально, но хорошая практика)
+      # Настраиваем переменные окружения для Clang
+      - name: Set up C++ compiler environment (Clang)
+        if: ${{ matrix.compiler == 'clang' }} # Условие: если компилятор - clang
+        run: |
+          echo "CXX=clang++" >> $GITHUB_ENV
+          echo "CC=clang" >> $GITHUB_ENV
+
+      - name: Configure CMake # Запуск CMake для генерации файлов сборки
+        run: cmake -B build -S .
+
+      - name: Build with ${{ matrix.compiler }} # Запуск сборки проекта
+        run: cmake --build build
+
+  # Задание для сборки на Windows
   build-windows:
     runs-on: windows-latest # Используем последний образ Windows (Visual Studio)
     strategy:
@@ -50,8 +55,18 @@ jobs:
         config: [Debug, Release]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  - name: Configure CMake # Запуск CMake с указанным генератором для Visual Studio
-    run: cmake -B build -S . -G "${{ matrix.generator }}"
+        uses: actions/checkout@v4
 
-  - name: Build with Visual Studio (${{ matrix.config }}) # Запуск сборки для Windows
-    run: cmake --build build --config ${{ matrix.config }}
+      # Конфигурируем CMake для Visual Studio 2019
+      - name: Configure CMake (Visual Studio 2019)
+        if: ${{ matrix.generator == 'Visual Studio 16 2019' }} # Условие: если генератор - VS 2019
+        run: cmake -B build -S . -G "Visual Studio 16 2019"
+
+      # Конфигурируем CMake для Visual Studio 2022
+      - name: Configure CMake (Visual Studio 2022)
+        if: ${{ matrix.generator == 'Visual Studio 17 2022' }} # Условие: если генератор - VS 2022
+        run: cmake -B build -S . -G "Visual Studio 17 2022"
+
+      - name: Build with Visual Studio (${{ matrix.config }}) # Запуск сборки для Windows
+        run: cmake --build build --config ${{ matrix.config }}
+
