--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -1,54 +1,42 @@
-# .github/workflows/ci_build.yml
-
 name: CMake CI Build
 
-# Указываем, когда запускать этот рабочий процесс
 on:
-  push:       # При каждом push в репозиторий
-    branches:
-      - main # Убедитесь, что это имя вашей основной ветки (main или master)
-  pull_request: # При создании или обновлении Pull Request
-    branches:
-      - main # Убедитесь, что это имя вашей основной ветки (main или master)
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  # ... остальной код вашего рабочего процесса ...
-  # .github/workflows/ci_build.yml
-  # ... (остальная часть файла) ...
-
-  # .github/workflows/ci_build.yml
-  # ... (остальная часть файла) ...
-
-  # Задание для сборки на Windows
   build-windows:
     runs-on: windows-latest
     strategy:
       matrix:
-        generator: ["Visual Studio 16 2019", "Visual Studio 17 2022"]
+        generator: ["Visual Studio 17 2022"]  # Рекомендуется использовать только 2022
         config: [Debug, Release]
+        include:
+          - generator: "Visual Studio 17 2022"
+            platform: "x64"
+            vs_version: "17.0"
+          # Если очень нужно 2019:
+          - generator: "Visual Studio 16 2019"
+            platform: "x64"
+            vs_version: "16.0"
+            runs-on: windows-2019  # Требуется специальный runner
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- ИСПРАВЛЕННЫЙ ШАГ: Установка окружения Visual Studio ---
-      - name: Setup Visual Studio Environment
-        uses: microsoft/setup-msbuild@v1.1
+      - name: Setup MSVC
+        uses: ilammy/msvc-dev-cmd@v1
         with:
-          # ИСПРАВЛЕНО: msbuild-version на vs-version
-          vs-version: |
-            ${{ matrix.generator == 'Visual Studio 16 2019' && '16.0' || '' }}
-            ${{ matrix.generator == 'Visual Studio 17 2022' && '17.0' || '' }}
-      # --- КОНЕЦ ИСПРАВЛЕННОГО ШАГА ---
+          toolset: ${{ contains(matrix.generator, '2019') && '14.29' || '14.38' }}
+          arch: ${{ matrix.platform }}
+          sdk: "10.0.20348.0"  # Укажите нужную версию Windows SDK
 
-      # Конфигурируем CMake для Visual Studio 2019
-      - name: Configure CMake (Visual Studio 2019)
-        if: ${{ matrix.generator == 'Visual Studio 16 2019' }}
-        run: cmake -B build -S . -G "Visual Studio 16 2019"
-
-      # Конфигурируем CMake для Visual Studio 2022
-      - name: Configure CMake (Visual Studio 2022)
-        if: ${{ matrix.generator == 'Visual Studio 17 2022' }}
-        run: cmake -B build -S . -G "Visual Studio 17 2022"
-
-      - name: Build with Visual Studio (${{ matrix.config }})
+      - name: Configure CMake
+        run: |
+          cmake -B build -S . -G "${{ matrix.generator }}" -A ${{ matrix.platform }}
+          
+      - name: Build
         run: cmake --build build --config ${{ matrix.config }}
