--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup CMake
-        uses: lukka/get-cmake@v4.8.0
+      - name: Setup CMake (Linux/macOS)
+        if: ${{ matrix.config.os != 'windows-latest' }}
+        run: |
+          sudo apt-get install -y cmake  # Ubuntu
+          # или brew install cmake — если нужно
+
+      - name: Setup CMake (Windows)
+        if: ${{ matrix.config.os == 'windows-latest' }}
+        uses: jwlawrence/cmake-installer@v1
+        with:
+          version: latest
 
       - name: Install dependencies (macOS)
         if: ${{ matrix.config.os == 'macos-latest' }}
@@ -107,5 +116,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build/solver-*.${{ matrix.config.installer }}
-          asset_name: solver-${{ matrix.config.os }}.${{ matrix.config.installer }}
+          asset_name: solver-installer.${{ matrix.config.installer }}
           asset_content_type: application/octet-stream
