--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup CMake
-        uses: lukka/get-cmake@v4.8.0
+        uses: cmake-actions/cmake@v1
 
       - name: Configure CMake
         run: |
@@ -110,6 +110,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/solver-1.0.0-Linux.deb
-          asset_name: solver-1.0.0-Linux.deb
+          asset_path: build/solver-*.deb
+          asset_name: solver-debian.deb
           asset_content_type: application/vnd.debian.binary-package
