Fix syntax errors in CMakeLists.txt files

--- a/formatter_lib/CMakeLists.txt
+++ b/formatter_lib/CMakeLists.txt
@@ -1,11 +1,11 @@
-# formatter_lib/CMakeLists.txt
-
 cmake_minimum_required(VERSION 3.10)
 project(FormatterLib)
 
-# Создаём статическую библиотеку 'formatter'
+# Создаем статическую библиотеку 'formatter' из formatter.cpp
 add_library(formatter STATIC formatter.cpp)
 
-# Указываем, где находятся заголовочные файлы для этой библиотеки
+# Указываем публичные директории для заголовочных файлов
 target_include_directories(formatter PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
