--- a/formatter_ex_lib/CMakeLists.txt
+++ b/formatter_ex_lib/CMakeLists.txt
@@ -1,14 +1,19 @@
-# lab3-4/formatter_ex_lib/CMakeLists.txt
-
 cmake_minimum_required(VERSION 3.10)
 project(FormatterExLib)
 
-# Создаём статическую библиотеку 'formatter_ex'
+# Создаем статическую библиотеку 'formatter_ex' из formatter_ex.cpp
 add_library(formatter_ex STATIC formatter_ex.cpp)
 
-# Линкуем с formatter (если formatter_ex использует его функции)
+# Линкуем 'formatter_ex' с 'formatter'.
 target_link_libraries(formatter_ex PUBLIC formatter)
 
-# Указываем, где искать заголовочные файлы для этой библиотеки
-cmake_minimum_required(VERSION 3.10)
+# Указываем публичные директории для заголовочных файлов 'formatter_ex'.
+target_include_directories(formatter_ex PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
 
+# Если хотите явно указать, какие заголовочные файлы предоставляются:
+set_target_properties(formatter_ex PROPERTIES
+    PUBLIC_HEADER "formatter_ex.h"
+)
