--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,39 @@
-# lab3-4/CMakeLists.txt
-
 cmake_minimum_required(VERSION 3.10)
-project(Lab3 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+project(formatter_inc)
 
 add_subdirectory(formatter_lib)
 add_subdirectory(formatter_ex_lib)
-add_subdirectory(hello_world)
 add_subdirectory(solver_lib)
-add_subdirectory(solver)
 
-# Указываем пути к заголовкам
-target_include_directories(hello_world PRIVATE ${PROJECT_SOURCE_DIR}/formatter_ex_lib)
-target_include_directories(solver PRIVATE ${PROJECT_SOURCE_DIR}/formatter_ex_lib)
-target_include_directories(solver PRIVATE ${PROJECT_SOURCE_DIR}/solver_lib)
+option(BUILD_EXAMPLES "Build examples" ON)
 
-# Чтобы formatter_ex "знала", где её заголовки:
-target_include_directories(formatter_ex PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/formatter_ex_lib>)
+if(BUILD_EXAMPLES)
+    add_subdirectory(hello_world)
+    add_subdirectory(solver)
+endif()
 
-# Настройка CPack
-set(CPACK_PROJECT_CONFIG_FILE "${PROJECT_SOURCE_DIR}/CPackConfig.cmake")
+include(GNUInstallDirs)
+
+install(TARGETS solver
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+set(CPACK_PACKAGE_NAME "solver")
+set(CPACK_PACKAGE_VERSION "1.0.0")
+set(CPACK_PACKAGE_DESCRIPTION "Solver Application")
+set(CPACK_PACKAGE_CONTACT "your.email@example.com")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/License.rtf")
+
+if (UNIX AND NOT APPLE)
+    set(CPACK_GENERATOR "DEB;RPM")
+elseif(APPLE)
+    set(CPACK_GENERATOR "DragNDrop")
+elseif(WIN32)
+    set(CPACK_GENERATOR "WIX")
+endif()
+
 include(CPack)
