--- a/formatter_lib/CMakeLists.txt
+++ b/formatter_lib/CMakeLists.txt
@@ -9,3 +9,7 @@ target_include_directories(formatter PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
 )
+
+# ДОБАВЬТЕ ЭТИ СТРОКИ:
+install(TARGETS formatter DESTINATION lib)
+install(FILES formatter.h DESTINATION include)
