--- a/hello_world/CMakeLists.txt
+++ b/hello_world/CMakeLists.txt
@@ -8,3 +8,6 @@ add_executable(hello_world main.cpp)
 # PRIVATE означает, что исполняемый файл 'hello_world' нуждается в 'formatter_ex' для своей работы,
 # но 'formatter_ex' не становится транзитивной зависимостью для других проектов через 'hello_world'.
 target_link_libraries(hello_world PRIVATE formatter_ex)
+
+# ДОБАВЬТЕ ЭТУ СТРОКУ:
+install(TARGETS hello_world DESTINATION bin)
