--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,11 +64,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup CMake (Linux)
-        if: ${{ matrix.config.os == 'ubuntu-latest' }}
-        run: |
-          echo "Using system CMake $(cmake --version)"
-
       - name: Configure & Build
         run: |
           mkdir build && cd build
@@ -86,23 +81,23 @@ jobs:
           name: release
           path: build/*
 
-	- name: Create GitHub Release
-	id: create_release
-	uses: actions/create-release@v1
-	env:
-	GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}  # <-- заменено здесь
-	with:
-	tag_name: ${{ github.ref }}
-	release_name: Release ${{ github.ref }}
-	 draft: false
-	 prerelease: false
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
 
-	- name: Upload Release Asset
-	uses: actions/upload-release-asset@v1
-	env:
-	GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}  # <-- и здесь
-	with:
-	 upload_url: ${{ steps.create_release.outputs.upload_url }}
-	asset_path: build/solver.deb
-	asset_name: solver.deb
-	asset_content_type: application/vnd.debian.binary-package
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/solver.deb
+          asset_name: solver.deb
+          asset_content_type: application/vnd.debian.binary-package
