--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,103 +1,90 @@
-name: CMake CI and Release
+name: Build and Package Release
 
 on:
   push:
-    branches: [main]
     tags:
-      - 'v*' # Запускать при пуше тега вроде v1.0.0
-  pull_request:
-    branches: [main]
+      - 'v*'
 
 jobs:
-  build-linux-gcc:
-    runs-on: ubuntu-latest
-    name: Linux GCC Build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y g++ cmake make
-      - name: Configure CMake
-        run: cmake -B build -S .
-      - name: Build
-        run: cmake --build build --parallel
-
-  build-linux-clang:
-    runs-on: ubuntu-latest
-    name: Linux Clang Build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y clang cmake make
-      - name: Configure CMake
-        run: cmake -B build -S .
-      - name: Build
-        run: cmake --build build --parallel
-
-  build-windows-msvc:
-    runs-on: windows-latest
+  build-release:
+    name: Build and Package Solver for ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        config: [Debug, Release]
-    name: Windows MSVC Build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Configure CMake
-        run: cmake -B build -S . -G "Visual Studio 17 2022" -A x64
-      - name: Build
-        run: cmake --build build --config ${{ matrix.config }} -- /m
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
-  build-macos-clang:
-    runs-on: macos-latest
-    name: macOS Clang Build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Configure CMake
-        run: cmake -B build -S .
-      - name: Build
-        run: cmake --build build --parallel
-
-  release-package:
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    needs: build-linux-gcc
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure & Build
+      - name: Install CMake (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake
+
+      - name: Install CMake (Windows)
+        if: matrix.os == 'windows-latest'
+        timeout-minutes: 5
+        run: |
+          choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y --no-progress
+     
+      - name: Install CMake (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install --formula cmake
+
+      - name: Configure CMake (Linux and macOS)
+        if: matrix.os != 'windows-latest'
         run: |
           mkdir build && cd build
           cmake ..
-          make
 
-      - name: Run CPack to generate packages
+      - name: Configure CMake (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          mkdir build
+          cd build
+          cmake -G "Visual Studio 17 2022" -A x64 ..
+
+      - name: Build solver
         run: |
           cd build
-          cpack
+          cmake --build . --target solver --config Release 
 
-      - name: Upload Artifact
+      - name: Create source archives (Linux only)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/}
+          git archive --format=tar.gz --prefix=solver-${VERSION}/ -o solver-src-${VERSION}.tar.gz HEAD
+          git archive --format=zip --prefix=solver-${VERSION}/ -o solver-src-${VERSION}.zip HEAD
+
+      - name: Package for Linux (.deb, .rpm)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          cd build
+          cpack -G DEB RPM
+
+      - name: Package for Windows (.msi)
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd build
+          cpack -G WIX
+
+      - name: Package for macOS (.dmg)
+        if: matrix.os == 'macos-latest'
+        run: |
+          cd build
+          cpack -G DragNDrop
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: release
-          path: build/*
-
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/solver.deb
-          asset_name: solver.deb
-          asset_content_type: application/vnd.debian.binary-package
+          name: release-artifacts-${{ matrix.os }}
+          path: |
+            solver-src-*.tar.gz
+            solver-src-*.zip
+            build/*.deb
+            build/*.rpm
+            build/*.msi
+            build/*.dmg
