--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,24 @@ add_subdirectory(formatter_ex_lib)
 add_subdirectory(solver_lib)
 
 option(BUILD_EXAMPLES "Build examples" ON)
+option(INSTALL_EXAMPLES "Install example binaries" OFF)
 
 if(BUILD_EXAMPLES)
     add_subdirectory(hello_world)
     add_subdirectory(solver)
-endif()
 
-include(GNUInstallDirs)
+    if(INSTALL_EXAMPLES)
+        install(TARGETS hello_world
+                RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        )
+    endif()
+endif()
 
 install(TARGETS solver
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+
+include(GNUInstallDirs)
 
 set(CPACK_PACKAGE_NAME "solver")
 set(CPACK_PACKAGE_VERSION "1.0.0")
@@ -35,5 +42,11 @@ elseif(APPLE)
 elseif(WIN32)
     set(CPACK_GENERATOR "WIX")
 endif()
+
+set(CPACK_INSTALL_CMAKE_PROJECTS
+    "${CMAKE_BINARY_DIR}"
+    "solver"
+    ALL
+    "/")
 
 include(CPack)
