--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           cd build
-          rm -rf _CPack_Packages  # Очистка остаточных данных от прошлых сборок
+	  Remove-Item -Recurse -Force _CPack_Packages
           cpack -G WIX --verbose   # Запуск с выводом логов для отладки
       - name: Package for macOS (.dmg)
         if: matrix.os == 'macos-latest'
