--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         timeout-minutes: 5
         run: |
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y --no-progress
-
+     
       - name: Install CMake (macOS)
         if: matrix.os == 'macos-latest'
         run: |
@@ -39,7 +39,7 @@ jobs:
         run: |
           mkdir build && cd build
           cmake ..
-          
+
       - name: Configure CMake (Windows)
         if: matrix.os == 'windows-latest'
         run: |
@@ -50,7 +50,7 @@ jobs:
       - name: Build solver
         run: |
           cd build
-          cmake --build . --target solver --config Release
+          cmake --build . --target solver --config Release 
 
       - name: Create source archives (Linux only)
         if: matrix.os == 'ubuntu-latest'
@@ -69,8 +69,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           cd build
-          Remove-Item -Recurse -Force _CPack_Packages
-          cpack -G WIX --verbose   # Запуск с выводом логов для отладки
+          cpack -G WIX
+
       - name: Package for macOS (.dmg)
         if: matrix.os == 'macos-latest'
         run: |
@@ -88,88 +88,3 @@ jobs:
             build/*.rpm
             build/*.msi
             build/*.dmg
-
-  create-github-release:
-    needs: build-release
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: artifacts/
-
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Source Tarball
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/release-artifacts-ubuntu-latest/solver-src-${{ github.ref_name }}.tar.gz
-          asset_name: solver-src-${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload Source Zip
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/release-artifacts-ubuntu-latest/solver-src-${{ github.ref_name }}.zip
-          asset_name: solver-src-${{ github.ref_name }}.zip
-          asset_content_type: application/zip
-
-      - name: Upload Linux DEB
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/release-artifacts-ubuntu-latest/build/solver-*.deb
-          asset_name: solver.deb
-          asset_content_type: application/vnd.debian.binary-package
-
-      - name: Upload Linux RPM
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/release-artifacts-ubuntu-latest/build/solver-*.rpm
-          asset_name: solver.rpm
-          asset_content_type: application/x-rpm
-
-      - name: Upload Windows MSI
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/release-artifacts-windows-latest/build/solver-*.msi
-          asset_name: solver.msi
-          asset_content_type: application/octet-stream
-
-      - name: Upload macOS DMG
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/release-artifacts-macos-latest/build/solver-*.dmg
-          asset_name: solver.dmg
-          asset_content_type: application/octet-stream
